// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > Default 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="flex-grow min-w-60"
      data-testid=""
    >
      <div
        class="group leading-normal"
        data-filled="true"
        data-has-label="true"
        data-required="false"
        data-slot="base"
        data-testid="selectfield_wrapper"
      >
        <label
          class="pointer-events-auto relative bottom-1.5 ml-1 text-small subpixel-antialiased group-data-[invalid=true]:!text-danger group-data-[required=true]:after:ml-0.5 group-data-[required=true]:after:text-danger group-data-[required=true]:after:content-["*"]"
          data-slot="label"
          for="react-select-selectField-input"
          id="react-aria-react-useId-mock"
        >
          Some Label
        </label>
        <div
          class="css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-selectField-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
            role="log"
          />
          <div
            data-testid="selectfield_select"
          >
            <div
              class="rounded-lg border-2 border-default-200 !duration-150 transition-background hover:border-default-400 group-data-[invalid=true]:border-danger group-data-[invalid=true]:hover:border-danger motion-reduce:transition-none css-cp01gg-control"
            >
              <div
                class="gap-1 p-1 css-14oxtc6"
              >
                <div
                  class="ml-1 py-0.5 pl-1 text-sm text-foreground-500 css-1vlsb4t-placeholder"
                  id="react-select-selectField-placeholder"
                >
                  Select...
                </div>
                <div
                  class="py-0.5 pl-1 css-n9qnu9"
                  data-value=""
                >
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-describedby="react-select-selectField-placeholder"
                    aria-errormessage=""
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-invalid="false"
                    aria-labelledby="react-aria-react-useId-mock"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    class=""
                    data-testid="selectfield"
                    id="react-select-selectField-input"
                    role="combobox"
                    spellcheck="false"
                    style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="gap-1 p-1 css-1wy0on6"
              >
                <span
                  class="bg-default-300 css-j4w2j1-indicatorSeparator"
                />
                <div
                  data-testid="selectfield_select_dropdown"
                >
                  <div
                    aria-hidden="true"
                    class="rounded-md p-1 text-foreground-500 hover:cursor-pointer hover:bg-default-200 hover:text-black css-g56vrd-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <input
            name="selectField"
            type="hidden"
            value=""
          />
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent data-[pressed=true]:scale-[0.97] outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-testid="form_submit_button"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > InitialValue 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="flex-grow min-w-60"
      data-testid=""
    >
      <div
        class="group leading-normal"
        data-filled="true"
        data-has-label="true"
        data-required="false"
        data-slot="base"
        data-testid="selectfield_wrapper"
      >
        <label
          class="pointer-events-auto relative bottom-1.5 ml-1 text-small subpixel-antialiased group-data-[invalid=true]:!text-danger group-data-[required=true]:after:ml-0.5 group-data-[required=true]:after:text-danger group-data-[required=true]:after:content-["*"]"
          data-slot="label"
          for="react-select-selectField-input"
          id="react-aria-react-useId-mock"
        >
          Some Label
        </label>
        <div
          class="css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-selectField-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
            role="log"
          />
          <div
            data-testid="selectfield_select"
          >
            <div
              class="rounded-lg border-2 border-default-200 !duration-150 transition-background hover:border-default-400 group-data-[invalid=true]:border-danger group-data-[invalid=true]:hover:border-danger motion-reduce:transition-none css-cp01gg-control"
            >
              <div
                class="gap-1 p-1 css-14oxtc6"
              >
                <div
                  class="!ml-1 !leading-7 font-normal w-full text-start text-small truncate group-data-[has-value=true]:text-default-foreground css-w54w9q-singleValue"
                >
                  Vanilla
                </div>
                <div
                  class="py-0.5 pl-1 css-n9qnu9"
                  data-value=""
                >
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-errormessage=""
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-invalid="false"
                    aria-labelledby="react-aria-react-useId-mock"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    class=""
                    data-testid="selectfield"
                    id="react-select-selectField-input"
                    role="combobox"
                    spellcheck="false"
                    style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="gap-1 p-1 css-1wy0on6"
              >
                <div
                  aria-hidden="true"
                  class="rounded-md p-1 text-foreground-500 hover:cursor-pointer hover:bg-default-200 hover:text-foreground-800 css-g56vrd-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-tj5bde-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                    />
                  </svg>
                </div>
                <span
                  class="bg-default-300 css-j4w2j1-indicatorSeparator"
                />
                <div
                  data-testid="selectfield_select_dropdown"
                >
                  <div
                    aria-hidden="true"
                    class="rounded-md p-1 text-foreground-500 hover:cursor-pointer hover:bg-default-200 hover:text-black css-g56vrd-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <input
            name="selectField"
            type="hidden"
            value="vanilla"
          />
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent data-[pressed=true]:scale-[0.97] outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-testid="form_submit_button"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Invalid 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="flex-grow min-w-60"
      data-testid=""
    >
      <div
        class="group leading-normal"
        data-filled="true"
        data-has-helper="true"
        data-has-label="true"
        data-invalid="true"
        data-required="false"
        data-slot="base"
        data-testid="selectfield_wrapper"
      >
        <label
          class="pointer-events-auto relative bottom-1.5 ml-1 text-small subpixel-antialiased group-data-[invalid=true]:!text-danger group-data-[required=true]:after:ml-0.5 group-data-[required=true]:after:text-danger group-data-[required=true]:after:content-["*"]"
          data-slot="label"
          for="react-select-selectField-input"
          id="react-aria-react-useId-mock"
        >
          Some Label
        </label>
        <div
          class="css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-selectField-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
            role="log"
          />
          <div
            data-testid="selectfield_select"
          >
            <div
              class="rounded-lg border-2 border-default-200 !duration-150 transition-background hover:border-default-400 group-data-[invalid=true]:border-danger group-data-[invalid=true]:hover:border-danger motion-reduce:transition-none css-cp01gg-control"
            >
              <div
                class="gap-1 p-1 css-14oxtc6"
              >
                <div
                  class="!ml-1 !leading-7 font-normal w-full text-start text-small !text-danger truncate group-data-[has-value=true]:text-default-foreground css-w54w9q-singleValue"
                >
                  Vanilla
                </div>
                <div
                  class="py-0.5 pl-1 css-n9qnu9"
                  data-value=""
                >
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-errormessage=""
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-invalid="true"
                    aria-labelledby="react-aria-react-useId-mock"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    class=""
                    data-testid="selectfield"
                    id="react-select-selectField-input"
                    role="combobox"
                    spellcheck="false"
                    style="opacity: 0; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="gap-1 p-1 css-1wy0on6"
              >
                <div
                  aria-hidden="true"
                  class="rounded-md p-1 text-foreground-500 hover:cursor-pointer hover:bg-default-200 hover:text-foreground-800 css-g56vrd-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-tj5bde-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                    />
                  </svg>
                </div>
                <span
                  class="bg-default-300 css-j4w2j1-indicatorSeparator"
                />
                <div
                  data-testid="selectfield_select_dropdown"
                >
                  <div
                    aria-hidden="true"
                    class="rounded-md p-1 text-foreground-500 hover:cursor-pointer hover:bg-default-200 hover:text-black css-g56vrd-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <input
            name="selectField"
            type="hidden"
            value="vanilla"
          />
        </div>
        <div
          class="p-1 flex relative flex-col gap-1.5"
          data-slot="helperWrapper"
        >
          <div
            class="text-tiny text-danger"
            data-slot="error-message"
            id="react-aria-react-useId-mock"
          >
            <ul
              aria-label="Error: Please select another option"
              data-testid="please_select_another_option"
            >
              <li>
                <div>
                  Please select another option
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent data-[pressed=true]:scale-[0.97] outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-testid="form_submit_button"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > MenuIsVisibleInCard 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="flex-grow min-w-60"
      data-testid=""
    >
      <div
        class="flex flex-col relative overflow-hidden h-auto text-foreground box-border bg-content1 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 shadow-none rounded-small w-full transition-transform-background motion-reduce:transition-none border border-divider"
        tabindex="-1"
      >
        <div
          class="flex p-3 z-10 w-full justify-start items-center shrink-0 overflow-inherit color-inherit subpixel-antialiased rounded-t-small text-base font-semibold"
        >
          Select in a Card
        </div>
        <hr
          class="shrink-0 bg-divider border-none w-full h-divider my-0 border-divider"
          role="separator"
        />
        <div
          class="relative flex w-full p-3 flex-auto flex-col place-content-inherit align-items-inherit h-auto break-words text-left overflow-y-auto subpixel-antialiased"
        >
          <div
            class="group leading-normal"
            data-filled="true"
            data-has-label="true"
            data-required="false"
            data-slot="base"
            data-testid="selectfield_wrapper"
          >
            <label
              class="pointer-events-auto relative bottom-1.5 ml-1 text-small subpixel-antialiased group-data-[invalid=true]:!text-danger group-data-[required=true]:after:ml-0.5 group-data-[required=true]:after:text-danger group-data-[required=true]:after:content-["*"]"
              data-slot="label"
              for="react-select-selectField-input"
              id="react-aria-react-useId-mock"
            >
              Some Label
            </label>
            <div
              class="css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-selectField-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
                role="log"
              >
                <span
                  id="aria-selection"
                />
                <span
                  id="aria-focused"
                />
                <span
                  id="aria-results"
                >
                  15 results available.
                </span>
                <span
                  id="aria-guidance"
                >
                  Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
                </span>
              </span>
              <div
                data-testid="selectfield_select"
              >
                <div
                  class="rounded-lg border-2 !duration-150 transition-background hover:border-default-400 group-data-[invalid=true]:border-danger group-data-[invalid=true]:hover:border-danger motion-reduce:transition-none border-focus css-cp01gg-control"
                >
                  <div
                    class="gap-1 p-1 css-14oxtc6"
                  >
                    <div
                      class="ml-1 py-0.5 pl-1 text-sm text-foreground-500 css-1vlsb4t-placeholder"
                      id="react-select-selectField-placeholder"
                    >
                      Select...
                    </div>
                    <div
                      class="py-0.5 pl-1 css-n9qnu9"
                      data-value=""
                    >
                      <input
                        aria-activedescendant="react-select-selectField-option-0"
                        aria-autocomplete="list"
                        aria-controls="react-select-selectField-listbox"
                        aria-describedby="react-select-selectField-placeholder"
                        aria-errormessage=""
                        aria-expanded="true"
                        aria-haspopup="true"
                        aria-invalid="false"
                        aria-labelledby="react-aria-react-useId-mock"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class=""
                        data-testid="selectfield"
                        id="react-select-selectField-input"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="gap-1 p-1 css-1wy0on6"
                  >
                    <span
                      class="bg-default-300 css-j4w2j1-indicatorSeparator"
                    />
                    <div
                      data-testid="selectfield_select_dropdown"
                    >
                      <div
                        aria-hidden="true"
                        class="rounded-md p-1 text-foreground-500 hover:cursor-pointer hover:bg-default-200 hover:text-black css-g56vrd-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="!z-50 css-1vbk7iu"
              >
                <div
                  class="mt-2 rounded-xl border border-default-200 bg-content1 p-1 shadow-lg css-100ebu3-menu"
                >
                  <div
                    class="css-bp8cua-ScrollManager"
                  />
                  <div
                    aria-multiselectable="false"
                    class="css-no1ryp"
                    id="react-select-selectField-listbox"
                    role="listbox"
                  >
                    <div
                      data-testid="selectfield_select_option_blueberry"
                    >
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class="rounded px-3 py-2 hover:cursor-pointer bg-default-100 active:bg-default-200 css-bio7mv-option"
                        id="react-select-selectField-option-0"
                        role="option"
                        tabindex="-1"
                      >
                        Blueberry
                      </div>
                    </div>
                    <div
                      data-testid="selectfield_select_option_caramel_swirl"
                    >
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class="rounded px-3 py-2 hover:cursor-pointer css-bio7mv-option"
                        id="react-select-selectField-option-1"
                        role="option"
                        tabindex="-1"
                      >
                        Caramel Swirl
                      </div>
                    </div>
                    <div
                      data-testid="selectfield_select_option_chocolate"
                    >
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class="rounded px-3 py-2 hover:cursor-pointer css-bio7mv-option"
                        id="react-select-selectField-option-2"
                        role="option"
                        tabindex="-1"
                      >
                        Chocolate
                      </div>
                    </div>
                    <div
                      data-testid="selectfield_select_option_coconut"
                    >
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class="rounded px-3 py-2 hover:cursor-pointer css-bio7mv-option"
                        id="react-select-selectField-option-3"
                        role="option"
                        tabindex="-1"
                      >
                        Coconut
                      </div>
                    </div>
                    <div
                      data-testid="selectfield_select_option_coffee"
                    >
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class="rounded px-3 py-2 hover:cursor-pointer css-bio7mv-option"
                        id="react-select-selectField-option-4"
                        role="option"
                        tabindex="-1"
                      >
                        Coffee
                      </div>
                    </div>
                    <div
                      data-testid="selectfield_select_option_cookies_cream"
                    >
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class="rounded px-3 py-2 hover:cursor-pointer css-bio7mv-option"
                        id="react-select-selectField-option-5"
                        role="option"
                        tabindex="-1"
                      >
                        Cookies & Cream
                      </div>
                    </div>
                    <div
                      data-testid="selectfield_select_option_lemon_sorbet"
                    >
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class="rounded px-3 py-2 hover:cursor-pointer css-bio7mv-option"
                        id="react-select-selectField-option-6"
                        role="option"
                        tabindex="-1"
                      >
                        Lemon Sorbet
                      </div>
                    </div>
                    <div
                      data-testid="selectfield_select_option_mango"
                    >
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class="rounded px-3 py-2 hover:cursor-pointer css-bio7mv-option"
                        id="react-select-selectField-option-7"
                        role="option"
                        tabindex="-1"
                      >
                        Mango
                      </div>
                    </div>
                    <div
                      data-testid="selectfield_select_option_mint_chocolate"
                    >
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class="rounded px-3 py-2 hover:cursor-pointer css-bio7mv-option"
                        id="react-select-selectField-option-8"
                        role="option"
                        tabindex="-1"
                      >
                        Mint Chocolate
                      </div>
                    </div>
                    <div
                      data-testid="selectfield_select_option_peanut_butter"
                    >
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class="rounded px-3 py-2 hover:cursor-pointer css-bio7mv-option"
                        id="react-select-selectField-option-9"
                        role="option"
                        tabindex="-1"
                      >
                        Peanut Butter
                      </div>
                    </div>
                    <div
                      data-testid="selectfield_select_option_pistachio"
                    >
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class="rounded px-3 py-2 hover:cursor-pointer css-bio7mv-option"
                        id="react-select-selectField-option-10"
                        role="option"
                        tabindex="-1"
                      >
                        Pistachio
                      </div>
                    </div>
                    <div
                      data-testid="selectfield_select_option_raspberry"
                    >
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class="rounded px-3 py-2 hover:cursor-pointer css-bio7mv-option"
                        id="react-select-selectField-option-11"
                        role="option"
                        tabindex="-1"
                      >
                        Raspberry
                      </div>
                    </div>
                    <div
                      data-testid="selectfield_select_option_rocky_road"
                    >
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class="rounded px-3 py-2 hover:cursor-pointer css-bio7mv-option"
                        id="react-select-selectField-option-12"
                        role="option"
                        tabindex="-1"
                      >
                        Rocky Road
                      </div>
                    </div>
                    <div
                      data-testid="selectfield_select_option_strawberry"
                    >
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class="rounded px-3 py-2 hover:cursor-pointer css-bio7mv-option"
                        id="react-select-selectField-option-13"
                        role="option"
                        tabindex="-1"
                      >
                        Strawberry
                      </div>
                    </div>
                    <div
                      data-testid="selectfield_select_option_vanilla"
                    >
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class="rounded px-3 py-2 hover:cursor-pointer css-bio7mv-option"
                        id="react-select-selectField-option-14"
                        role="option"
                        tabindex="-1"
                      >
                        Vanilla
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <input
                name="selectField"
                type="hidden"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent data-[pressed=true]:scale-[0.97] outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-testid="form_submit_button"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > MenuIsVisibleInModal 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="flex-grow min-w-60"
      data-testid=""
    >
      <button
        class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent data-[pressed=true]:scale-[0.97] outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-default text-default-foreground data-[hover=true]:opacity-hover"
        data-hover="true"
        data-testid="open_modal"
        type="button"
      >
        Open Modal
      </button>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent data-[pressed=true]:scale-[0.97] outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-testid="form_submit_button"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > MultiSelect 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="flex-grow min-w-60"
      data-testid=""
    >
      <div
        class="group leading-normal"
        data-filled="true"
        data-has-label="true"
        data-required="false"
        data-slot="base"
        data-testid="selectfield_wrapper"
      >
        <label
          class="pointer-events-auto relative bottom-1.5 ml-1 text-small subpixel-antialiased group-data-[invalid=true]:!text-danger group-data-[required=true]:after:ml-0.5 group-data-[required=true]:after:text-danger group-data-[required=true]:after:content-["*"]"
          data-slot="label"
          for="react-select-selectField-input"
          id="react-aria-react-useId-mock"
        >
          Some Label
        </label>
        <div
          class="css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-selectField-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
            role="log"
          />
          <div
            data-testid="selectfield_select"
          >
            <div
              class="rounded-lg border-2 border-default-200 !duration-150 transition-background hover:border-default-400 group-data-[invalid=true]:border-danger group-data-[invalid=true]:hover:border-danger motion-reduce:transition-none css-cp01gg-control"
            >
              <div
                class="gap-1 p-1 css-pl07w5"
              >
                <div
                  class="items-center gap-1.5 rounded bg-default-100 py-0.5 pl-2 pr-1 css-x2yrli-multiValue"
                >
                  <div
                    class="py-0.5 leading-6 font-normal w-full text-start text-small truncate group-data-[has-value=true]:text-default-foreground css-zztcs7"
                  >
                    Vanilla
                  </div>
                  <div
                    aria-label="Remove Vanilla"
                    class="rounded text-default-500 hover:cursor-pointer hover:border-default-300 hover:text-default-800 css-13d4ns5"
                    role="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="14"
                      viewBox="0 0 20 20"
                      width="14"
                    >
                      <path
                        d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="items-center gap-1.5 rounded bg-default-100 py-0.5 pl-2 pr-1 css-x2yrli-multiValue"
                >
                  <div
                    class="py-0.5 leading-6 font-normal w-full text-start text-small truncate group-data-[has-value=true]:text-default-foreground css-zztcs7"
                  >
                    Chocolate
                  </div>
                  <div
                    aria-label="Remove Chocolate"
                    class="rounded text-default-500 hover:cursor-pointer hover:border-default-300 hover:text-default-800 css-13d4ns5"
                    role="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="14"
                      viewBox="0 0 20 20"
                      width="14"
                    >
                      <path
                        d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="py-0.5 pl-1 css-n9qnu9"
                  data-value=""
                >
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-errormessage=""
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-invalid="false"
                    aria-labelledby="react-aria-react-useId-mock"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    class=""
                    data-testid="selectfield"
                    id="react-select-selectField-input"
                    role="combobox"
                    spellcheck="false"
                    style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="gap-1 p-1 css-1wy0on6"
              >
                <div
                  aria-hidden="true"
                  class="rounded-md p-1 text-foreground-500 hover:cursor-pointer hover:bg-default-200 hover:text-foreground-800 css-g56vrd-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-tj5bde-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                    />
                  </svg>
                </div>
                <span
                  class="bg-default-300 css-j4w2j1-indicatorSeparator"
                />
                <div
                  data-testid="selectfield_select_dropdown"
                >
                  <div
                    aria-hidden="true"
                    class="rounded-md p-1 text-foreground-500 hover:cursor-pointer hover:bg-default-200 hover:text-black css-g56vrd-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <input
              name="selectField"
              type="hidden"
              value="vanilla"
            />
            <input
              name="selectField"
              type="hidden"
              value="chocolate"
            />
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent data-[pressed=true]:scale-[0.97] outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-testid="form_submit_button"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Required 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="flex-grow min-w-60"
      data-testid=""
    >
      <div
        class="group leading-normal"
        data-filled="true"
        data-has-label="true"
        data-required="true"
        data-slot="base"
        data-testid="selectfield_wrapper"
      >
        <label
          class="pointer-events-auto relative bottom-1.5 ml-1 text-small subpixel-antialiased group-data-[invalid=true]:!text-danger group-data-[required=true]:after:ml-0.5 group-data-[required=true]:after:text-danger group-data-[required=true]:after:content-["*"]"
          data-slot="label"
          for="react-select-selectField-input"
          id="react-aria-react-useId-mock"
        >
          Some Label
        </label>
        <div
          class="css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-selectField-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
            role="log"
          />
          <div
            data-testid="selectfield_select"
          >
            <div
              class="rounded-lg border-2 border-default-200 !duration-150 transition-background hover:border-default-400 group-data-[invalid=true]:border-danger group-data-[invalid=true]:hover:border-danger motion-reduce:transition-none css-cp01gg-control"
            >
              <div
                class="gap-1 p-1 css-14oxtc6"
              >
                <div
                  class="ml-1 py-0.5 pl-1 text-sm text-foreground-500 css-1vlsb4t-placeholder"
                  id="react-select-selectField-placeholder"
                >
                  Select...
                </div>
                <div
                  class="py-0.5 pl-1 css-n9qnu9"
                  data-value=""
                >
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-describedby="react-select-selectField-placeholder"
                    aria-errormessage=""
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-invalid="false"
                    aria-labelledby="react-aria-react-useId-mock"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    class=""
                    data-testid="selectfield"
                    id="react-select-selectField-input"
                    role="combobox"
                    spellcheck="false"
                    style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="gap-1 p-1 css-1wy0on6"
              >
                <span
                  class="bg-default-300 css-j4w2j1-indicatorSeparator"
                />
                <div
                  data-testid="selectfield_select_dropdown"
                >
                  <div
                    aria-hidden="true"
                    class="rounded-md p-1 text-foreground-500 hover:cursor-pointer hover:bg-default-200 hover:text-black css-g56vrd-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <input
            name="selectField"
            type="hidden"
            value=""
          />
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent data-[pressed=true]:scale-[0.97] outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-testid="form_submit_button"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;
